chore: create new nuxt project #1688
chore: rename web folders and run new web #1688

chore: add auth #1688

chore: ci & docker for new web #1688

fix: pnpm-lock #1688

fix: pnpm-lock again #1688

fix: config #1688

fix: format cmd & remove test packages #1688

fix: eslint #1688

fix: ci & eslint #1688

fix: parser #1688

fix: dockerfile #1688

fix: add recursive #1688

fix: remove component #1688

fix: component name #1688

fix: docker file #1688

--- a/.gitlab/ci/build.gitlab-ci.yml
+++ b/.gitlab/ci/build.gitlab-ci.yml
@@ -31,6 +31,26 @@ overbookd/web_build:
     - when: never
   variables:
     PNPM_WORKSPACE: "@overbookd/web"
+  artifacts:
+    paths:
+      - web/.nuxt
+    expire_in: 1 hour
+
+overbookd/new_web_build:
+  extends: .build
+  needs: [install]
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      changes:
+        - apps/new-web/**/*
+        - pnpm-lock.yaml
+    - when: never
+  variables:
+    PNPM_WORKSPACE: "@overbookd/new-web"
+  artifacts:
+    paths:
+      - new-web/.nuxt
+    expire_in: 1 hour
 
 overbookd/libraries_build:
   extends: .build
