--- a/.gitlab/ci/docker-build.gitlab-ci.yml
+++ b/.gitlab/ci/docker-build.gitlab-ci.yml
@@ -143,3 +143,49 @@ overbookd-api_docker_build:
     paths:
       - ${BASE_IMAGE}.tar
     expire_in: 1 hour
+
+overbookd-new-web_docker_pre_build:
+  extends: .pre-build
+  variables:
+    APP_PATH: apps/new-web
+    APP_NAME: new-web
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "new-web" && $RELEASE'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: manual
+      allow_failure: true
+    - if: '$CI_COMMIT_BRANCH == "main"'
+    - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]+$/'
+    - when: never
+  cache:
+    key: $CI_COMMIT_REF_SLUG
+    paths:
+      - ${APP_NAME}_installer.tar
+    policy: push
+
+overbookd-new-web_docker_build:
+  extends: .docker-build
+  needs: ["overbookd-new-web_docker_pre_build"]
+  cache:
+    key: $CI_COMMIT_REF_SLUG
+    paths:
+      - ${APP_NAME}_installer.tar
+    policy: pull
+  variables:
+    APP_PATH: apps/new-web
+    APP_NAME: new-web
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "new-web" && $RELEASE'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: '$CI_COMMIT_BRANCH == "main"'
+      changes:
+        - apps/new-web/**/*
+        - package.json
+    - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]+$/'
+    - when: never
