--- a/domains/contribution/package.json
+++ b/domains/contribution/package.json
@@ -37,6 +37,7 @@
     "pnpm": "8.15.4"
   },
   "dependencies": {
+    "@overbookd/list": "workspace:*",
     "@overbookd/period": "workspace:*",
     "@overbookd/permission": "workspace:*"
   }
