--- a/utils/http/package.json
+++ b/utils/http/package.json
@@ -34,6 +34,7 @@
   ],
   "dependencies": {
     "@overbookd/festival-event": "workspace:^",
+    "@overbookd/logistic": "workspace:^",
     "@overbookd/period": "workspace:^",
     "@overbookd/personal-account": "workspace:^"
   },
