--- a/domains/logistic/package.json
+++ b/domains/logistic/package.json
@@ -38,6 +38,7 @@
     "pnpm": "8.15.4"
   },
   "dependencies": {
-    "@overbookd/list": "workspace:*"
+    "@overbookd/list": "workspace:*",
+    "@overbookd/period": "workspace:*"
   }
 }
