--- a/domains/logistic/package.json
+++ b/domains/logistic/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@overbookd/logistic",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Gestion de la logistique pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
   "private": true,
-  "main": "dist/logistic/src/index.js",
+  "main": "dist/domains/logistic/src/index.js",
   "bugs": {
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono/-/issues/new",
     "email": "contact-project+24-heures-insa-overbookd-mono-31598236-issue-@incoming.gitlab.com"
