fix(new-web): :zap: adjust dockerfile and ci
Issue #1688

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,9 +2,13 @@
 .gitlab-ci.yml
 .idea
 .vscode
+.devcontainer
 **/.nuxt
+**/.output
+.pnpm-store
 **/node_modules
 **/dist
+**/build
 **/Dockerfile
 **/Dockerfile.dev
 **/.dockerignore
