chore: move permission from domains to constants. #1582

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "project": [
       "./apps/*/tsconfig.json",
       "!./apps/web/tsconfig.json",
+      "./constants/*/tsconfig.json",
       "./domains/*/tsconfig.json",
       "./libraries/*/tsconfig.json",
       "./utils/*/tsconfig.json",
