--- a/.gitlab/ci/install.gitlab-ci.yml
+++ b/.gitlab/ci/install.gitlab-ci.yml
@@ -7,6 +7,7 @@ install:
         - apps/**/*
         - libraries/**/*
         - domains/**/*
+        - constants/**/*
         - pnpm-lock.yaml
     - when: never
   script:
