--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -26,17 +26,17 @@
       "@overbookd/list": ["../../libraries/list/src"],
       "@overbookd/logistic": ["../../domains/logistic/src"],
       "@overbookd/period": ["../../libraries/period/src"],
-      "@overbookd/permission": ["../../domains/permission/src"],
+      "@overbookd/permission": ["../../constants/permission/src"],
       "@overbookd/personal-account": ["../../domains/personal-account/src"],
       "@overbookd/registration": ["../../domains/registration/src"],
       "@overbookd/signa": ["../../domains/signa/src"],
       "@overbookd/slugify": ["../../libraries/slugify/src"],
       "@overbookd/user": ["../../domains/user/src"],
       "@overbookd/volunteer-availability": [
-        "../../domains/volunteer-availability/src"
-      ]
+        "../../domains/volunteer-availability/src",
+      ],
     },
-    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "nuxt-leaflet"]
+    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "nuxt-leaflet"],
   },
-  "exclude": ["**/node_modules", ".nuxt", "**/dist"]
+  "exclude": ["**/node_modules", ".nuxt", "**/dist"],
 }
