--- a/tsconfig.all-modules-import.json
+++ b/tsconfig.all-modules-import.json
@@ -12,7 +12,7 @@
       "@overbookd/list": ["./libraries/list/src"],
       "@overbookd/logistic": ["./domains/logistic/src"],
       "@overbookd/period": ["./libraries/period/src"],
-      "@overbookd/permission": ["./domains/permission/src"],
+      "@overbookd/permission": ["./constants/permission/src"],
       "@overbookd/personal-account": ["./domains/personal-account/src"],
       "@overbookd/registration": ["./domains/registration/src"],
       "@overbookd/signa": ["./domains/signa/src"],
