--- a/constants/permission/tsconfig.build.json
+++ b/constants/permission/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["../../tsconfig.cross-modules-import.json", "../../tsconfig.build.json"],
+  "extends": ["../../tsconfig.build.json"],
   "compilerOptions": {
     "outDir": "./dist"
   }
