--- a/constants/permission/tsconfig.json
+++ b/constants/permission/tsconfig.json
@@ -1,9 +1,4 @@
 {
-  "extends": [
-    "../../tsconfig.cross-modules-import.json",
-    "../../tsconfig.package.json"
-  ],
-  "compilerOptions": {
-    "outDir": "./dist"
-  }
+  "extends": ["../../tsconfig.package.json"],
+  "compilerOptions": { "outDir": "./dist" },
 }
