--- a/constants/permission/package.json
+++ b/constants/permission/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/permission",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "Gestion des permissions pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
-    "directory": "domains/permission"
+    "directory": "constants/permission"
   },
   "scripts": {
     "build": "tsc --project ./tsconfig.build.json",
