--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -65,6 +65,7 @@
     "@overbookd/registration": "workspace:^",
     "@overbookd/signa": "workspace:^",
     "@overbookd/slugify": "workspace:^",
+    "@overbookd/status": "workspace:^",
     "@overbookd/user": "workspace:^",
     "@overbookd/volunteer-availability": "workspace:^",
     "@prisma/client": "5.11.0",
