--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -31,12 +31,13 @@
       "@overbookd/registration": ["../../domains/registration/src"],
       "@overbookd/signa": ["../../domains/signa/src"],
       "@overbookd/slugify": ["../../libraries/slugify/src"],
+      "@overbookd/status": ["../../constants/status/src"],
       "@overbookd/user": ["../../domains/user/src"],
       "@overbookd/volunteer-availability": [
-        "../../domains/volunteer-availability/src",
-      ],
+        "../../domains/volunteer-availability/src"
+      ]
     },
-    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "nuxt-leaflet"],
+    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "nuxt-leaflet"]
   },
-  "exclude": ["**/node_modules", ".nuxt", "**/dist"],
+  "exclude": ["**/node_modules", ".nuxt", "**/dist"]
 }
