--- a/tsconfig.all-modules-import.json
+++ b/tsconfig.all-modules-import.json
@@ -17,6 +17,7 @@
       "@overbookd/registration": ["./domains/registration/src"],
       "@overbookd/signa": ["./domains/signa/src"],
       "@overbookd/slugify": ["./libraries/slugify/src"],
+      "@overbookd/status": ["./constants/status/src"],
       "@overbookd/user": ["./domains/user/src"],
       "@overbookd/web": ["./apps/web/src"]
     }
