--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -25,6 +25,7 @@
       "@overbookd/http": ["../../utils/http/src"],
       "@overbookd/list": ["../../libraries/list/src"],
       "@overbookd/logistic": ["../../domains/logistic/src"],
+      "@overbookd/money": ["../../libraries/money/src"],
       "@overbookd/period": ["../../libraries/period/src"],
       "@overbookd/permission": ["../../constants/permission/src"],
       "@overbookd/personal-account": ["../../domains/personal-account/src"],
