--- a/tsconfig.all-modules-import.json
+++ b/tsconfig.all-modules-import.json
@@ -11,6 +11,7 @@
       "@overbookd/http": ["./utils/http/src"],
       "@overbookd/list": ["./libraries/list/src"],
       "@overbookd/logistic": ["./domains/logistic/src"],
+      "@overbookd/money": ["./libraries/money/src"],
       "@overbookd/period": ["./libraries/period/src"],
       "@overbookd/permission": ["./constants/permission/src"],
       "@overbookd/personal-account": ["./domains/personal-account/src"],
