--- a/libraries/money/package.json
+++ b/libraries/money/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@overbookd/money",
   "version": "1.0.0",
-  "description": "Gestion des évènements métier pour overbookd",
+  "description": "Gestion des montants monetaires pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
