--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/web",
-  "version": "2.15.23",
+  "version": "2.15.24",
   "description": "Application web pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -45,6 +45,7 @@
     "@overbookd/http": "workspace:*",
     "@overbookd/list": "workspace:*",
     "@overbookd/logistic": "workspace:*",
+    "@overbookd/money": "workspace:*",
     "@overbookd/period": "workspace:*",
     "@overbookd/permission": "workspace:*",
     "@overbookd/personal-account": "workspace:*",
