refactor(constants): add team repo and task categories #1745

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
     "@overbookd/contribution": "workspace:*",
     "@overbookd/domain-events": "workspace:*",
     "@overbookd/festival-event": "workspace:*",
+    "@overbookd/festival-event-constants": "workspace:*",
     "@overbookd/http": "workspace:*",
     "@overbookd/list": "workspace:*",
     "@overbookd/logistic": "workspace:*",
@@ -52,7 +53,7 @@
     "@overbookd/registration": "workspace:*",
     "@overbookd/signa": "workspace:*",
     "@overbookd/slugify": "workspace:*",
-    "@overbookd/status": "workspace:*",
+    "@overbookd/team": "workspace:*",
     "@overbookd/user": "workspace:*",
     "@overbookd/volunteer-availability": "workspace:*",
     "@tiptap/pm": "2.2.4",
