--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -21,7 +21,10 @@
       "@overbookd/configuration": ["../../domains/configuration/src"],
       "@overbookd/contribution": ["../../domains/contribution/src"],
       "@overbookd/domain-events": ["../../utils/domain-events/src"],
-      "@overbookd/festival-event": ["../../domains/festival-activity/src"],
+      "@overbookd/festival-event": ["../../domains/festival-event/src"],
+      "@overbookd/festival-event-constants": [
+        "../../constants/festival-event-constants/src"
+      ],
       "@overbookd/http": ["../../utils/http/src"],
       "@overbookd/list": ["../../libraries/list/src"],
       "@overbookd/logistic": ["../../domains/logistic/src"],
@@ -32,7 +35,7 @@
       "@overbookd/registration": ["../../domains/registration/src"],
       "@overbookd/signa": ["../../domains/signa/src"],
       "@overbookd/slugify": ["../../libraries/slugify/src"],
-      "@overbookd/status": ["../../constants/status/src"],
+      "@overbookd/team": ["../../constants/team/src"],
       "@overbookd/user": ["../../domains/user/src"],
       "@overbookd/volunteer-availability": [
         "../../domains/volunteer-availability/src"
