--- a/constants/team/package.json
+++ b/constants/team/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@overbookd/festival-event",
-  "version": "1.18.5",
-  "description": "Gestion des activités sur le festival pour overbookd",
+  "name": "@overbookd/team",
+  "version": "1.0.0",
+  "description": "Gestion des équipes pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
   "private": true,
-  "main": "dist/domains/festival-event/src/index.js",
+  "main": "dist/index.js",
   "bugs": {
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono/-/issues/new",
     "email": "contact-project+24-heures-insa-overbookd-mono-31598236-issue-@incoming.gitlab.com"
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
-    "directory": "domains/festival-event"
+    "directory": "constants/team"
   },
   "scripts": {
     "build": "tsc --project ./tsconfig.build.json",
@@ -25,23 +25,15 @@
     "version:major": "pnpm version major --commit-hooks=false --git-tag-version=false",
     "version:minor": "pnpm version minor --commit-hooks=false --git-tag-version=false",
     "version:patch": "pnpm version patch --commit-hooks=false --git-tag-version=false",
-    "test:unit": "vitest --config ../../vitest.config.ts",
-    "test:unit:ci": "vitest --config ../../vitest-ci.config.ts --watch=false"
+    "test:unit": "echo 'No tests'",
+    "test:unit:ci": "echo 'No tests'"
   },
   "keywords": [
-    "festival-event",
-    "festival-activity",
-    "fa",
-    "domain"
+    "team",
+    "constants"
   ],
   "engines": {
     "node": "20.12.1",
     "pnpm": "8.15.6"
-  },
-  "dependencies": {
-    "@overbookd/festival-event-constants": "workspace:*",
-    "@overbookd/list": "workspace:*",
-    "@overbookd/period": "workspace:*",
-    "@overbookd/slugify": "workspace:*"
   }
 }
