--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/api",
-  "version": "2.17.22",
+  "version": "2.17.23",
   "description": "API pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -56,6 +56,7 @@
     "@overbookd/contribution": "workspace:^",
     "@overbookd/domain-events": "workspace:^",
     "@overbookd/festival-event": "workspace:^",
+    "@overbookd/festival-event-constants": "workspace:^",
     "@overbookd/http": "workspace:^",
     "@overbookd/list": "workspace:^",
     "@overbookd/logistic": "workspace:^",
@@ -65,7 +66,7 @@
     "@overbookd/registration": "workspace:^",
     "@overbookd/signa": "workspace:^",
     "@overbookd/slugify": "workspace:^",
-    "@overbookd/status": "workspace:^",
+    "@overbookd/team": "workspace:^",
     "@overbookd/user": "workspace:^",
     "@overbookd/volunteer-availability": "workspace:^",
     "@prisma/client": "5.12.1",
