--- a/constants/team/package.json
+++ b/constants/team/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@overbookd/alerts",
-  "version": "1.0.44",
-  "description": "Utilitaire pour les alertes d'overbookd",
+  "name": "@overbookd/team",
+  "version": "1.0.0",
+  "description": "Gestion des équipes pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
   "private": true,
-  "main": "dist/utils/alerts/src/index.js",
+  "main": "dist/index.js",
   "bugs": {
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono/-/issues/new",
     "email": "contact-project+24-heures-insa-overbookd-mono-31598236-issue-@incoming.gitlab.com"
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
-    "directory": "utils/alerts"
+    "directory": "constants/team"
   },
   "scripts": {
     "build": "tsc --project ./tsconfig.build.json",
@@ -28,13 +28,9 @@
     "test:unit": "echo 'No tests'",
     "test:unit:ci": "echo 'No tests'"
   },
-  "dependencies": {
-    "@overbookd/registration": "workspace:^",
-    "rxjs": "7.8.1"
-  },
   "keywords": [
-    "alerts",
-    "utils"
+    "team",
+    "constants"
   ],
   "engines": {
     "node": "20.12.1",
