--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -18,6 +18,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"],
       "@overbookd/alerts": ["../../utils/alerts/src"],
+      "@overbookd/assignment": ["../../domains/assignment/src"],
       "@overbookd/configuration": ["../../domains/configuration/src"],
       "@overbookd/contribution": ["../../domains/contribution/src"],
       "@overbookd/domain-events": ["../../utils/domain-events/src"],
