--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/api",
-  "version": "2.17.24",
+  "version": "2.17.25",
   "description": "API pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -52,6 +52,7 @@
     "@nestjs/swagger": "7.3.1",
     "@nestjs/throttler": "5.1.2",
     "@overbookd/alerts": "workspace:^",
+    "@overbookd/assignment": "workspace:^",
     "@overbookd/configuration": "workspace:^",
     "@overbookd/contribution": "workspace:^",
     "@overbookd/domain-events": "workspace:^",
