ci: ✨ add prefeat for versionning

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -11,7 +11,8 @@
           { "type": "style", "release": "patch" },
           { "type": "refactor", "release": "patch" },
           { "type": "perf", "release": "patch" },
-          { "type": "test", "release": "patch" }
+          { "type": "test", "release": "patch" },
+          { "type": "prefeat", "release": "minor"}
         ],
         "parserOpts": {
           "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "NEW EDITION"]
