prefeat(assignment): implement orga-task in api and web #1789

--- a/utils/http/package.json
+++ b/utils/http/package.json
@@ -33,6 +33,7 @@
     "utils"
   ],
   "dependencies": {
+    "@overbookd/assignment": "workspace:^",
     "@overbookd/festival-event": "workspace:^",
     "@overbookd/logistic": "workspace:^",
     "@overbookd/period": "workspace:^",
