--- a/utils/http/package.json
+++ b/utils/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/http",
-  "version": "1.0.147",
+  "version": "1.0.148",
   "description": "Utilitaire pour les requêtes HTTP",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -33,6 +33,7 @@
     "utils"
   ],
   "dependencies": {
+    "@overbookd/assignment": "workspace:^",
     "@overbookd/festival-event": "workspace:^",
     "@overbookd/logistic": "workspace:^",
     "@overbookd/period": "workspace:^",
