fix(api): expose add and get endpoints. #1853

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -64,6 +64,7 @@
     "@overbookd/period": "workspace:^",
     "@overbookd/permission": "workspace:^",
     "@overbookd/personal-account": "workspace:^",
+    "@overbookd/planning": "workspace:^",
     "@overbookd/registration": "workspace:^",
     "@overbookd/signa": "workspace:^",
     "@overbookd/slugify": "workspace:^",
