--- a/domains/planning/package.json
+++ b/domains/planning/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@overbookd/alerts",
-  "version": "1.0.50",
-  "description": "Utilitaire pour les alertes d'overbookd",
+  "name": "@overbookd/planning",
+  "version": "1.0.0",
+  "description": "Gestion des planning pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
   "private": true,
-  "main": "dist/utils/alerts/src/index.js",
+  "main": "dist/domains/planning/src/index.js",
   "bugs": {
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono/-/issues/new",
     "email": "contact-project+24-heures-insa-overbookd-mono-31598236-issue-@incoming.gitlab.com"
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
-    "directory": "utils/alerts"
+    "directory": "domains/planning"
   },
   "scripts": {
     "build": "tsc --project ./tsconfig.build.json",
@@ -25,19 +25,17 @@
     "version:major": "pnpm version major --commit-hooks=false --git-tag-version=false",
     "version:minor": "pnpm version minor --commit-hooks=false --git-tag-version=false",
     "version:patch": "pnpm version patch --commit-hooks=false --git-tag-version=false",
-    "test:unit": "echo 'No tests'",
-    "test:unit:ci": "echo 'No tests'"
-  },
-  "dependencies": {
-    "@overbookd/registration": "workspace:^",
-    "rxjs": "7.8.1"
+    "test:unit": "vitest --config ../../vitest.config.ts",
+    "test:unit:ci": "vitest --config ../../vitest-ci.config.ts --watch=false"
   },
   "keywords": [
-    "alerts",
-    "utils"
+    "planning"
   ],
   "engines": {
-    "node": "20.12.2",
+    "node": "20.12.1",
     "pnpm": "8.15.6"
+  },
+  "dependencies": {
+    "@overbookd/period": "workspace:*"
   }
 }
