prefeat(planning): retrieve and filter volunteers with planning. #1874

--- a/utils/http/package.json
+++ b/utils/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/http",
-  "version": "1.0.165",
+  "version": "1.0.166",
   "description": "Utilitaire pour les requêtes HTTP",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -37,7 +37,8 @@
     "@overbookd/festival-event": "workspace:^",
     "@overbookd/logistic": "workspace:^",
     "@overbookd/period": "workspace:^",
-    "@overbookd/personal-account": "workspace:^"
+    "@overbookd/personal-account": "workspace:^",
+    "@overbookd/user": "workspace:^"
   },
   "engines": {
     "node": "20.12.2",
