--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/web",
-  "version": "2.17.21",
+  "version": "2.17.22",
   "description": "Application web pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -44,6 +44,7 @@
     "@overbookd/domain-events": "workspace:*",
     "@overbookd/festival-event": "workspace:*",
     "@overbookd/festival-event-constants": "workspace:*",
+    "@overbookd/geo-location": "workspace:*",
     "@overbookd/http": "workspace:*",
     "@overbookd/list": "workspace:*",
     "@overbookd/logistic": "workspace:*",
