fix(planning): add geo location on ical events. #1891

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -58,6 +58,7 @@
     "@overbookd/domain-events": "workspace:^",
     "@overbookd/festival-event": "workspace:^",
     "@overbookd/festival-event-constants": "workspace:^",
+    "@overbookd/geo-location": "workspace:^",
     "@overbookd/http": "workspace:^",
     "@overbookd/list": "workspace:^",
     "@overbookd/logistic": "workspace:^",
