--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/api",
-  "version": "2.19.20",
+  "version": "2.19.21",
   "description": "API pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -58,6 +58,7 @@
     "@overbookd/domain-events": "workspace:^",
     "@overbookd/festival-event": "workspace:^",
     "@overbookd/festival-event-constants": "workspace:^",
+    "@overbookd/geo-location": "workspace:^",
     "@overbookd/http": "workspace:^",
     "@overbookd/list": "workspace:^",
     "@overbookd/logistic": "workspace:^",
