--- a/apps/new-web/package.json
+++ b/apps/new-web/package.json
@@ -51,6 +51,7 @@
     "@overbookd/volunteer-availability": "workspace:*",
     "chart.js": "4.4.1",
     "jwt-decode": "3.1.2",
+    "lodash": "4.17.21",
     "pinia": "2.1.7",
     "sass": "1.71.1",
     "vue-chartjs": "5.3.0",
@@ -64,5 +65,9 @@
     "nuxt": "3.10.3",
     "vue": "3.4.19",
     "vue-router": "4.3.0"
+  },
+  "engines": {
+    "node": "20.12.2",
+    "pnpm": "9.1.1"
   }
 }
