--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@nuxt/builder": "2.17.3",
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "5.13.6",
     "@nuxtjs/pwa": "3.3.5",
@@ -95,6 +96,7 @@
     "typed-vuex": "0.3.1",
     "typescript": "5.4.5",
     "vue": "2.7.16",
+    "vue-server-renderer": "2.7.16",
     "vue-router": "3.6.5",
     "vuex": "3.6.2",
     "webpack": "4.47.0"
