--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,17 +16,17 @@
     "directory": "apps/web"
   },
   "scripts": {
-    "build": "nuxt build",
+    "build": "nuxi build",
     "build:ci": "CI=1 pnpm run build",
-    "dev": "nuxt dev",
-    "dev:host": "nuxt --hostname '0'",
-    "generate": "nuxt-ts generate",
+    "dev": "nuxi dev",
+    "dev:host": "nuxi --hostname '0'",
+    "generate": "nuxi generate",
     "format": "prettier --write \"./**/*.ts\" \"./**/*.vue\"",
     "lint": "eslint --ext \".ts,.vue\" --ignore-path .gitignore . --fix",
     "version:major": "pnpm version major --commit-hooks=false --git-tag-version=false",
     "version:minor": "pnpm version minor --commit-hooks=false --git-tag-version=false",
     "version:patch": "pnpm version patch --commit-hooks=false --git-tag-version=false",
-    "start": "nuxt-ts start",
+    "start": "nuxi start",
     "test:unit": "echo 'No tests'",
     "test:unit:ci": "echo 'No tests'",
     "test:watch": "echo 'No tests'"
