--- a/tsconfig.package.json
+++ b/tsconfig.package.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "CommonJS",
-    "lib": ["ES2020", "ES2022"],
+    "module": "NodeNext",
     "esModuleInterop": true,
     "isolatedModules": true,
     "sourceMap": true,
@@ -10,7 +9,17 @@
     "declarationMap": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "noUncheckedIndexedAccess": true,
+    "outDir": "dist",
+    "lib": [
+        "es2022",
+        "dom",
+        "dom.iterable"
+    ],
   },
   "exclude": ["**/dist", "**/node_modules", "**/build"]
 }
