--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,7 +22,7 @@
     "dev:host": "nuxi --hostname '0'",
     "generate": "nuxi generate",
     "format": "prettier --write \"./**/*.ts\" \"./**/*.vue\"",
-    "lint": "npx nuxi prepare && eslint --ext \".ts,.vue\" --ignore-path .gitignore . --fix",
+    "lint": "eslint --ext \".ts,.vue\" --ignore-path .gitignore . --fix",
     "version:major": "pnpm version major --commit-hooks=false --git-tag-version=false",
     "version:minor": "pnpm version minor --commit-hooks=false --git-tag-version=false",
     "version:patch": "pnpm version patch --commit-hooks=false --git-tag-version=false",
