--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "directory": "apps/web"
   },
   "scripts": {
+    "postinstall": "nuxi prepare",
     "build": "nuxi build",
     "build:ci": "CI=1 pnpm run build",
     "dev": "nuxi dev",
