--- a/apps/old-web/Dockerfile
+++ b/apps/old-web/Dockerfile
@@ -10,8 +10,8 @@ RUN pnpm fetch
 COPY pnpm-workspace.yaml ./
 COPY package.json ./
 
-WORKDIR /overbookd/apps/web
-COPY apps/web/ ./
+WORKDIR /overbookd/apps/old-web
+COPY apps/old-web/ ./
 
 WORKDIR /overbookd/libraries
 COPY libraries/ ./
@@ -26,7 +26,7 @@ WORKDIR /overbookd/utils
 COPY utils/ ./
 
 WORKDIR /overbookd
-RUN pnpm install --recursive --offline --filter '@overbookd/web...'
+RUN pnpm install --recursive --offline --filter '@overbookd/old-web...'
 
 FROM installer AS builder
 
@@ -40,18 +40,18 @@ COPY tsconfig.cross-modules-import.json ./
 COPY tsconfig.package.json ./
 COPY tsconfig.build.json ./
 COPY tsconfig.all-modules-import.json ./
-RUN pnpm --filter '@overbookd/web...' run build:ci
+RUN pnpm --filter '@overbookd/old-web...' run build:ci
 
 FROM node:22.2.0-alpine
 
-ARG WEB_VERSION
+ARG OLD_WEB_VERSION
 
-LABEL org.24heures.overbookd.image.title="Overbookd-web" \
+LABEL org.24heures.overbookd.image.title="Overbookd-old-web" \
   org.24heures.overbookd.image.documentation="https://gitlab.com/24-heures-insa/overbookd-mono/-/wikis/home" \
   org.24heures.overbookd.image.licenses="https://gitlab.com/24-heures-insa/overbookd-mono/-/blob/main/LICENSE" \
   org.24heures.overbookd.image.source="https://gitlab.com/24-heures-insa/overbookd-mono" \
   org.24heures.overbookd.image.authors="https://gitlab.com/24-heures-insa/overbookd-mono/-/graphs/main" \
-  org.24heures.overbookd.image.version=${WEB_VERSION}
+  org.24heures.overbookd.image.version=${OLD_WEB_VERSION}
 
 ENV NODE_ENV production
 
