--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,7 @@
     "directory": "apps/web"
   },
   "scripts": {
-    "postinstall": "nuxi prepare && ls apps/web/.nuxt",
+    "postinstall": "nuxi prepare && pwd && ls .nuxt",
     "build": "nuxi build",
     "build:ci": "CI=1 pnpm run build",
     "dev": "nuxi dev",
