fix: .nuxt artifact #1688

--- a/.gitlab/ci/install.gitlab-ci.yml
+++ b/.gitlab/ci/install.gitlab-ci.yml
@@ -17,5 +17,5 @@ install:
       - .pnpm-store
       - pnpm-lock.yaml
       - node_modules
-      - .nuxt
+      - apps/web/.nuxt
     expire_in: 1 hour
