--- a/.gitlab/ci/release.gitlab-ci.yml
+++ b/.gitlab/ci/release.gitlab-ci.yml
@@ -7,7 +7,7 @@ overbookd/release:
   interruptible: true
   image: node:22.2.0-alpine
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" && $RELEASE'
+    - if: '$CI_PIPELINE_SOURCE == "web" && $RELEASE && 0'
     - when: never
   variables:
     GIT_AUTHOR_NAME: 24-bot
