--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,24 +35,28 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "@overbookd/alerts": "workspace:*",
+    "@overbookd/assignment": "workspace:*",
     "@overbookd/configuration": "workspace:*",
     "@overbookd/contribution": "workspace:*",
     "@overbookd/domain-events": "workspace:*",
     "@overbookd/festival-event": "workspace:*",
+    "@overbookd/festival-event-constants": "workspace:*",
+    "@overbookd/geo-location": "workspace:*",
     "@overbookd/http": "workspace:*",
     "@overbookd/list": "workspace:*",
     "@overbookd/logistic": "workspace:*",
+    "@overbookd/money": "workspace:*",
     "@overbookd/period": "workspace:*",
     "@overbookd/permission": "workspace:*",
     "@overbookd/personal-account": "workspace:*",
     "@overbookd/registration": "workspace:*",
     "@overbookd/signa": "workspace:*",
     "@overbookd/slugify": "workspace:*",
+    "@overbookd/team": "workspace:*",
     "@overbookd/user": "workspace:*",
     "@overbookd/volunteer-availability": "workspace:*",
     "chart.js": "4.4.1",
     "jwt-decode": "3.1.2",
-    "lodash": "4.17.21",
     "pinia": "2.1.7",
     "sass": "1.71.1",
     "vue-chartjs": "5.3.0",
